--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,24 +1,27 @@
-<h1>Here are the current bus lines:</h1>
+<div class="col-md-6">
+<h3>Here are the current bus lines:</h3>
 
 <ul>
 
   <%@lines.each do |line| %>
-  <li><%= link_to "#{line.name}", line_path(line) %></li>
+  <li id="col-border" class="list-text"><%= link_to "#{line.name}", line_path(line) %></li>
   <% end %>
 
 </ul>
 
-<h1>Here are the current bus stations:</h1>
+</div>
+<!-- <div class="vertical-line" style="height: 600px;">
+</div> -->
+
+<div id="col-border" class="col-md-6">
+<h3>Here are the current bus stations:</h3>
 
 <ul>
 
   <%@stations.each do |station| %>
-  <li><%= link_to "#{station.name}", station_path(station) %></li>
+  <li class="list-text"><%= link_to "#{station.name}", station_path(station) %></li>
   <% end %>
 
 </ul>
+</div>
 
-
-<p><%= link_to "New Line", new_line_path, :class => "btn btn-default" %></p>
-
-<p><%= link_to "New Station", new_station_path, :class => "btn btn-default" %></p>
