--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,18 +28,19 @@
       <ul class="nav navbar-nav">
         <li><a href="/stations/new">Add new station</a></li>
         <li><a href="/lines/new">Add new line</a></li>
+        <% if current_user %>
+    <li>Logged in as <%= current_user.email %>.</li>
+    <li><%= link_to "Log Out", logout_path %></li>
+      <% else %>
+    <li><%= link_to "Sign Up", signup_path %></li> <li>or</li>
+    <li><%= link_to "Log In", login_path %></li>
+      <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </div>
 
-  <% if current_user %>
-  Logged in as <%= current_user.email %>.
-  <%= link_to "Log Out", logout_path %>
-<% else %>
-  <%= link_to "Sign Up", signup_path %> or
-  <%= link_to "Log In", login_path %>
-<% end %>
+
 <br/>
 
 <%= flash[:alert] %>
